# x-degrees

./: Cargo.toml  Rocket.toml  database.annon.json  database.json  launch.sh  log.txt  students.annon.json  students.json
docs/: global.css  index.html  populate-dropdown.js  populate-dropdown.js.v2
form/: index.html  populate-dropdown.js
scripts/: after-eli.txt  annon.py  before-eli.txt  dist.py  eli-diff.txt  network.py  rank.py
scripts/network/: index.html  index.js
src/: interaction.rs  main.rs  main.rs.bak
