[package]
name = "x-degrees"
version = "0.1.0"
authors = ["IsaccBarker <plutoisaplanet4324@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = "1.0.126"
serde_json = "1.0"
urlencoding = "1.3.3"
log = "0.4.14"
