[package]
name = "x-degrees"
version = "0.1.0"
authors = ["IsaccBarker <plutoisaplanet4324@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
urlencoding = "1.3.3"
log = "0.4.14"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]

